style the job card containers and fix spacings

--- a/CSS/my-jobs-seeker.css
+++ b/CSS/my-jobs-seeker.css
@@ -224,3 +224,17 @@ body {
 /*
 //////////////////////////////////////////////////////////////////////
  ///////////////////////////// Job Cards  //////////////////////////////////*/
+.job-cards--container {
+  padding: 0 3.2rem;
+}
+
+.job-cards {
+  padding: 1.6rem 2.4rem;
+  border-bottom: 0.01rem solid #dee2e6;
+  margin-bottom: 3.2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+  position: relative;
+  max-width: 100rem;
+}
